--- a/SEBA WEB/index.html
+++ b/SEBA WEB/index.html
@@ -19,6 +19,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <!-- la fuente q se llama oswald -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap">
+    <!-- bootstrap prueba -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
  <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -65,56 +68,58 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </main>
 
         <hr>
-        <img src="img/lolsuper1 (2)-1.jpg" alt="">
+        <div class="showcase">
+        <img src="img/nuevaport (1).jpg" alt="">
         <hr>
-        <center><img src="img/FIITALANDIA.png" alt=""></center>
-        <hr>
-        <center><h2> Sofia Agustina Blet Ayala en el "DESARROLLO WEB".Ahora verán mi evolución en la creación de páginas webs en cada enlace.</h2></center>
-
+            </div>
+            <hr>
+            <br><br>
+        <center><h2><u>"Sofia Agustina Blet Ayala en el DESARROLLO WEB.Ahora verán mi evolución en la creación de páginas webs en cada enlace."</u></h2></center>
+<br><br>
 <!-- noticias -->
 <div class="news-cards">
 <div>
     <img src="img/fiita.jpg" alt="img/celuroto.jpg">
     <h3>1er página</h3>
     <p></p>
-    <a href="http://tranquil-apparatus.surge.sh/" target="_blank">VER 1er página AQUÍ <i class="fa fa-angle-double-right"></i> </a>
+    <a href="http://tranquil-apparatus.surge.sh/" target="_blank"><button class="bg-link" >VER 1er página AQUÍ &#128156;</button></a>
 </div>
 <div>
     <img src="img/compu.jpg" alt="img/compu.jpg">
     <h3>2da página</h3>
     <p></p>
-    <a href="http://fiita2doproyecto.tk/" target="_blank">VER 2da página AQUÍ <i class="fa fa-angle-double-right"></i> </a>
+    <a href="http://fiita2doproyecto.tk/" target="_blank"><button class="bg-link" >VER 2da página AQUÍ &#128156;</button></a>
 </div>
 <div>
     <img src="img/juego2.jpeg" alt="img/juego2.jpeg">
     <h3>3ra página</h3>
-    <p>Contenido para ABOGADOS</p>
-    <a href="http://abogadosonline.cf" target="_blank">VER 3ra página AQUÍ<i class="fa fa-angle-double-right"></i> </a>
+    <a href="http://abogadosonline.cf" target="_blank"><button class="bg-link" >VER 3ra página AQUÍ &#128156;</button></a>
 </div>
 <div>
     <img src="img/portada.jpg" alt="img/comidajpeg.jpeg">
     <h3>4ta pagina </h3>
-    <p>Último por ahora</p>
-    <a href="http://megaportfiita.tk/" target="_blank"> VER 4ta pagina AQUÍ <i class="fa fa-angle-double-right"></i> <target="_blank"></a>
+    <a href="http://megaportfiita.tk/" target="_blank"><button class="bg-link" >VER 4ta página AQUÍ &#128156;</button></a>
 </div>
 <!-- veo como quedaria el 5to y el resto -->
 <div>
-    <img src="img/portada.jpg" alt="img/comidajpeg.jpeg">
+    <img src="img/megamusica.jpeg" alt="img/comidajpeg.jpeg">
     <h3>5ta pagina </h3>
-    <p>Página de ventas</p>
-    <a href="PAGINA VENTAS/index.html" target="_blank"> VER 5ta pagina AQUÍ <i class="fa fa-angle-double-right"></i> <target="_blank"></a>
+    <a href="PAGINA VENTAS/index.html" target="_blank"> <button class="bg-link" >VER 5ta página AQUÍ &#128156;</button></a>
 </div>
 <div>
-    <img src="img/portada.jpg" alt="img/comidajpeg.jpeg">
+    <img src="img/oscuro.jpg" alt="img/comidajpeg.jpeg">
     <h3>5ta pagina </h3>
-    <p>Página de ventas</p>
-    <a href="PAGINA VENTAS/index.html" target="_blank"> VER 5ta pagina AQUÍ <i class="fa fa-angle-double-right"></i> <target="_blank"></a>
+    <a href="PAGINA VENTAS/index.html" target="_blank"><button class="bg-link" >VER 6ta página AQUÍ &#128156;</button></a>
 </div>
 <div>
-    <img src="img/portada.jpg" alt="img/comidajpeg.jpeg">
+    <img src="img/nuevaport (3).jpg" alt="img/comidajpeg.jpeg">
     <h3>5ta pagina </h3>
-    <p>Página de ventas</p>
-    <a href="PAGINA VENTAS/index.html" target="_blank"> VER 5ta pagina AQUÍ <i class="fa fa-angle-double-right"></i> <target="_blank"></a>
+    <a href="PAGINA VENTAS/index.html" target="_blank"><button class="bg-link" >VER 7 página AQUÍ &#128156;</button></a>
+</div>
+<div>
+    <img src="img/nuevaport (2).jpg" alt="img/nuevaport (2).jpg">
+    <h3>5ta pagina </h3>
+    <a href="PAGINA VENTAS/index.html" target="_blank"><button class="bg-link" >VER 8 página AQUÍ &#128156;</button></a>
 </div>
 </div>
 <!-- otra seccion -->
@@ -126,10 +131,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <img src="img/compu.jpg" alt="img/rosafoto.png">
                  <div class="hover-galeria">
                 <img src="img/can.png" alt="img/iconorosa.png">
-                <p>A futuro</p>
+                <p>Próximamente</p>
                 </div>
             </div>
         </div>
+        <!-- <div class="galeria-port">
+            <div class="imagen-port">
+                <img src="img/compu.jpg" alt="img/rosafoto.png">
+                 <div class="hover-galeria">
+                <img src="img/can.png" alt="img/iconorosa.png">
+                <p>Próximamente</p>
+                </div>
+            </div>
+        </div> -->
     </div>
     </section>
 
@@ -167,8 +181,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </section>
 </div>
+<hr>
 <footer class="footer">
-    <h3>©FIITA derechos reservados 2020</h3>
+    <h3>©FIITA derechos reservados 2020 &#128156;</h3>
 
 
 </footer>
